k8s/labs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: study
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
