k8s/labs/v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: study
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-v2
  template:
    metadata:
      labels:
        app: frontend-v2
    spec:
      containers:
        - name: web
          image: fe-study:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2
  namespace: study
spec:
  selector:
    app: frontend-v2
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
